--- a/Jungle-Academy/portfolio4-admin_design/css/header.css
+++ b/Jungle-Academy/portfolio4-admin_design/css/header.css
@@ -56,16 +56,16 @@ i {
   height: 0px;
 }
 
-.main-tnb {
+#main-tnb {
   height: 100%;
 }
 
-.main-tnb .tnb-wrap {
+#main-tnb .tnb-wrap {
   height: 100%;
   line-height: 61px;
 }
 
-.main-tnb .tnb-wrap > li {
+#main-tnb .tnb-wrap > li {
   display: inline-block;
   vertical-align: middle;
   width: 20px;
@@ -73,28 +73,28 @@ i {
   line-height: initial;
 }
 
-.main-tnb .tnb-wrap .menu-bar {
+#main-tnb .tnb-wrap .menu-bar {
   margin-left: 25px;
 }
 
-.main-tnb .tnb-wrap .menu-bar i {
+#main-tnb .tnb-wrap .menu-bar i {
   font-size: 22px;
 }
 
-.main-tnb .tnb-wrap .refresh {
+#main-tnb .tnb-wrap .refresh {
   margin-left: 50px;
 }
 
-.main-tnb .tnb-wrap .refresh i {
+#main-tnb .tnb-wrap .refresh i {
   font-size: 18px;
 }
 
-.main-tnb .tnb-wrap .bell {
+#main-tnb .tnb-wrap .bell {
   position: relative;
   margin-left: 31px;
 }
 
-.main-tnb .tnb-wrap .bell.notice:after {
+#main-tnb .tnb-wrap .bell.notice:after {
   content: "";
   display: block;
   background-color: #EF5B5C;
@@ -107,13 +107,13 @@ i {
   border-radius: 5px;
 }
 
-.main-tnb .tnb-wrap .search-board {
+#main-tnb .tnb-wrap .search-board {
   width: 300px;
   height: 36px;
   margin-left: 40px;
 }
 
-.main-tnb .tnb-wrap .search-board input {
+#main-tnb .tnb-wrap .search-board input {
   display: block;
   float: left;
   width: 280px;
@@ -121,15 +121,15 @@ i {
   padding-left: 15px;
 }
 
-.main-tnb .tnb-wrap .search-board input:focus {
+#main-tnb .tnb-wrap .search-board input:focus {
   background: #F4F5F7;
 }
 
-.main-tnb .tnb-wrap .search-board input:focus a {
+#main-tnb .tnb-wrap .search-board input:focus a {
   background: #F4F5F7;
 }
 
-.main-tnb .tnb-wrap .search-board a {
+#main-tnb .tnb-wrap .search-board a {
   display: block;
   float: left;
   width: -webkit-fit-content;
@@ -166,7 +166,7 @@ i {
 .user-wrap {
   position: absolute;
   top: 0px;
-  right: 60px;
+  right: 5%;
   height: 61px;
 }
 
@@ -199,19 +199,26 @@ i {
   border-radius: 2px;
 }
 
-.user-wrap .user-info li ul #triangle-border {
+.user-wrap .user-info li ul:before {
+  content: '';
   display: block;
   position: absolute;
-  top: -16px;
+  top: -14px;
   left: 140px;
-  width: 12px;
-  height: 16px;
-  margin: 0px;
-  padding: 0px;
-  border: 8px solid gray;
+  border: 7px solid gray;
   border-right-color: transparent;
   border-left-color: transparent;
   border-top-color: transparent;
+}
+
+.user-wrap .user-info li ul:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 75%;
+  width: 100%;
+  height: 1px;
+  background: #EAEDF0;
 }
 
 .user-wrap .user-info li ul li {
@@ -226,7 +233,7 @@ i {
 }
 
 .user-wrap .user-info li ul li.notice:after {
-  content: "";
+  content: '';
   display: inline-block;
   position: absolute;
   top: 12px;
@@ -256,30 +263,96 @@ i {
   color: #4E5156;
 }
 
-.user-wrap .user-info li ul #design-line-1 {
-  display: block;
-  height: 1px;
-  margin: 0px;
-  padding: 0px;
-  border-top: 1px solid #EAEDF0;
+.user-wrap .user-info li ul li + li {
+  margin-top: 10px;
 }
 
 #main-gnb {
   position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 250px;
+  top: 61px;
+  width: 50px;
   height: 100%;
-  background: #1B1E24;
+  background: #27A599;
 }
 
 #main-gnb #main-gnb-header {
+  display: none;
+}
+
+#main-gnb #main-gnb-contents .gnb-user-profile {
+  display: none;
+}
+
+#main-gnb .main-gnb-menu {
+  margin-top: 20px;
+}
+
+#main-gnb .main-gnb-menu > li {
+  position: relative;
+}
+
+#main-gnb .main-gnb-menu > li > a {
+  display: inline-block;
+  width: 100%;
+  line-height: 50px;
+  text-align: center;
+}
+
+#main-gnb .main-gnb-menu > li > a i {
+  font-size: 15px;
+  color: #fff;
+}
+
+#main-gnb .main-gnb-menu > li > a span {
+  display: none;
+}
+
+#main-gnb .main-gnb-menu > li ul.show {
+  display: block;
+}
+
+#main-gnb .main-gnb-menu > li ul {
+  display: none;
+  position: absolute;
+  top: 0%;
+  left: 100%;
+  width: 250px;
+  background: #20252C;
+}
+
+#main-gnb .main-gnb-menu > li ul li a {
+  display: block;
+  padding-left: 55px;
+  color: #AFB7BF;
+  line-height: 40px;
+}
+
+#main-gnb .main-gnb-menu > li ul li a:hover {
+  background: #1C2026;
+  color: #fff;
+}
+
+header[open] {
+  width: calc(100% - 250px);
+  left: 250px;
+  right: 0px;
+}
+
+header[open] #main-gnb {
+  top: 0px;
+  left: 0px;
+  width: 250px;
+  background: #1B1E24;
+}
+
+header[open] #main-gnb #main-gnb-header {
+  display: block;
   position: relative;
   height: 60px;
   background: #21262D;
 }
 
-#main-gnb #main-gnb-header h1 {
+header[open] #main-gnb #main-gnb-header h1 {
   position: absolute;
   top: 50%;
   left: 15px;
@@ -288,10 +361,10 @@ i {
   float: left;
   color: #fff;
   font-size: 25px;
-  font-weight: normal;
+  font-weight: lighter;
 }
 
-#main-gnb #main-gnb-header h1 span {
+header[open] #main-gnb #main-gnb-header h1 span {
   display: inline-block;
   width: 5px;
   height: 5px;
@@ -301,7 +374,7 @@ i {
   vertical-align: middle;
 }
 
-#main-gnb #main-gnb-header ul {
+header[open] #main-gnb #main-gnb-header ul {
   position: absolute;
   top: 50%;
   right: 15px;
@@ -310,11 +383,11 @@ i {
   float: right;
 }
 
-#main-gnb #main-gnb-header ul li + li {
+header[open] #main-gnb #main-gnb-header ul li + li {
   margin-left: 5px;
 }
 
-#main-gnb #main-gnb-header ul li {
+header[open] #main-gnb #main-gnb-header ul li {
   position: relative;
   display: block;
   float: left;
@@ -324,13 +397,13 @@ i {
   text-align: center;
 }
 
-#main-gnb #main-gnb-header ul li a {
+header[open] #main-gnb #main-gnb-header ul li a {
   display: block;
   width: 100%;
   height: 100%;
 }
 
-#main-gnb #main-gnb-header ul li a i {
+header[open] #main-gnb #main-gnb-header ul li a i {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -340,7 +413,7 @@ i {
   color: #fff;
 }
 
-#main-gnb #main-gnb-header ul .mail.notice:after {
+header[open] #main-gnb #main-gnb-header ul .mail.notice:after {
   content: "";
   display: block;
   position: absolute;
@@ -353,16 +426,17 @@ i {
   border-radius: 5px;
 }
 
-#main-gnb-contents {
+header[open] #main-gnb #main-gnb-contents {
   top: 60px;
 }
 
-#main-gnb-contents #gnb-user-profile {
+header[open] #main-gnb #main-gnb-contents .gnb-user-profile {
+  display: block;
   height: 90px;
   padding-top: 22px;
 }
 
-#main-gnb-contents #gnb-user-profile .user-profile {
+header[open] #main-gnb #main-gnb-contents .gnb-user-profile .user-profile {
   float: left;
   background-image: url(../img/avatar.jpg);
   width: 46px;
@@ -371,7 +445,7 @@ i {
   margin: 0px 0px 0px 25px;
 }
 
-#main-gnb-contents #gnb-user-profile .user-profile.notice:after {
+header[open] #main-gnb #main-gnb-contents .gnb-user-profile .user-profile.notice:after {
   width: 13px;
   height: 13px;
   bottom: -3px;
@@ -380,7 +454,7 @@ i {
   border-radius: 6px;
 }
 
-#main-gnb-contents #gnb-user-profile h2 {
+header[open] #main-gnb #main-gnb-contents .gnb-user-profile h2 {
   float: left;
   color: #fff;
   text-transform: capitalize;
@@ -389,67 +463,77 @@ i {
   margin-left: 15px;
 }
 
-#main-gnb-contents #gnb-user-profile h2 span {
+header[open] #main-gnb #main-gnb-contents .gnb-user-profile h2 span {
   display: block;
   padding-top: 5px;
   color: #8B919F;
   font-size: 14px;
 }
 
-#main-gnb-menu * {
+header[open] #main-gnb .main-gnb-menu {
+  margin-top: 0px;
+}
+
+header[open] #main-gnb .main-gnb-menu * {
   font-size: 15px;
   color: #8B919F;
   text-transform: capitalize;
 }
 
-#main-gnb-menu > li {
-  position: relative;
+header[open] #main-gnb .main-gnb-menu > li {
   width: 100%;
 }
 
-> #main-gnb-menu > li:nth-child(4) i, #main-gnb-menu > li:nth-child(10) i {
+> header[open] #main-gnb .main-gnb-menu > li:nth-child(4) i, header[open] #main-gnb .main-gnb-menu > li:nth-child(10) i {
   margin-left: 2px;
 }
 
-#main-gnb-menu > li > a {
-  display: block;
-  width: 100%;
+header[open] #main-gnb .main-gnb-menu > li > a {
+  line-height: initial;
+  text-align: left;
   padding: 14px 0px 14px 30px;
 }
 
-#main-gnb-menu > li > a i {
+header[open] #main-gnb .main-gnb-menu > li > a:hover {
+  color: #fff;
+}
+
+header[open] #main-gnb .main-gnb-menu > li > a:hover i {
+  color: #fff;
+}
+
+header[open] #main-gnb .main-gnb-menu > li > a i {
   padding-right: 5px;
 }
 
-#main-gnb-menu > li > a:hover {
-  color: #fff;
+header[open] #main-gnb .main-gnb-menu > li > a span {
+  display: inline;
 }
 
-#main-gnb-menu > li > a:hover i {
-  color: #fff;
-}
-
-#main-gnb-menu > li ul.show {
+header[open] #main-gnb .main-gnb-menu > li ul.show {
   display: block;
 }
 
-#main-gnb-menu > li ul {
+header[open] #main-gnb .main-gnb-menu > li ul {
+  position: static;
+  display: none;
   width: 100%;
   background: #21262D;
+  padding: 10px 0px;
 }
 
-#main-gnb-menu > li ul li a {
-  display: block;
+header[open] #main-gnb .main-gnb-menu > li ul li a {
   padding: 8px 0px 8px 45px;
+  line-height: initial;
   -webkit-transition: border .2s;
   transition: border .2s;
   font-size: 14px;
-  color: #AFB7BF;
   -webkit-transition: padding-left .2s;
   transition: padding-left .2s;
 }
 
-#main-gnb-menu > li ul li a:hover {
+header[open] #main-gnb .main-gnb-menu > li ul li a:hover {
+  background: none;
   padding-left: 55px;
 }
 /*# sourceMappingURL=header.css.map */
