--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.css
@@ -83,121 +83,9 @@ section.intro > div .content-wrap div + div > ul ul li a {
 }
 
 .section .content-wrap .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 100%;
-  padding: 0% 5%;
-}
-
-.section .content-wrap .content li {
   position: relative;
-  overflow: hidden;
-}
-
-.section .content-wrap .content li img {
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 0%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 53%;
-}
-
-.section .content-wrap .content li .desk {
-  float: right;
-  width: 45%;
-}
-
-.section .content-wrap .content li .desk table {
+  height: 100%;
   width: 100%;
-  line-height: 1.3;
-}
-
-.section .content-wrap .content li .desk table caption {
-  text-align: left;
-  font-size: 60px;
-  font-weight: 300;
-  margin-bottom: 50px;
-  line-height: 1.1;
-}
-
-.section .content-wrap .content li .desk table caption span {
-  display: block;
-  font-size: 50px;
-  font-weight: 100;
-}
-
-.section .content-wrap .content li .desk table tbody tr {
-  line-height: 1.5;
-}
-
-.section .content-wrap .content li .desk table tbody tr th {
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.section .content-wrap .content li .desk table tbody tr td {
-  font-size: 18px;
-  color: #555555;
-}
-
-.section .content-wrap .content li .desk table tbody tr td a {
-  background: url(../img/icon/click-icon.png) no-repeat right center/25px 25px;
-  margin-left: 5px;
-  padding: 0px 18px 4px 4px;
-  border-bottom: 1px dotted #555555;
-  font-weight: 500;
-}
-
-.section .content-wrap .content li .desk .sub-title {
-  margin-top: 50px;
-}
-
-.section .content-wrap .content li .desk .sub-title li {
-  background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
-  font-size: 23px;
-  padding-left: 35px;
-  color: #333333;
-}
-
-.section .content-wrap .content li .desk .sub-title li span {
-  color: red;
-}
-
-.section .content-wrap .content li .desk .btn {
-  width: 80%;
-  margin-top: 50px;
-}
-
-.section .content-wrap .content li .desk .btn a {
-  display: block;
-  float: left;
-  width: 40%;
-  padding: 3.5%;
-  margin-top: 10px;
-  background: #FCFBFC;
-  font-size: 18px;
-  text-align: center;
-  border: 2px solid #7D7563;
-  border-radius: 8px;
-  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
-          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
-  -webkit-transition: all .4s;
-  transition: all .4s;
-}
-
-.section .content-wrap .content li .desk .btn a:first-child {
-  margin-right: 3%;
-}
-
-.section .content-wrap .content li .desk .btn a:hover {
-  background: #7D7563;
-  color: #fff;
-  border-color: #FCFBFC;
 }
 
 .section .content-wrap .control .prev img, .section .content-wrap .control .next img {
@@ -227,6 +115,176 @@ section.intro > div .content-wrap div + div > ul ul li a {
   width: 100%;
   text-align: center;
   font-size: 15px;
+}
+
+.content > li {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 90%;
+  overflow: hidden;
+}
+
+.content > li:first-child {
+  display: none;
+}
+
+.content > li img {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 53%;
+}
+
+.content > li .desk {
+  float: right;
+  width: 45%;
+}
+
+.content > li .desk table {
+  width: 100%;
+  line-height: 1.3;
+}
+
+.content > li .desk table caption {
+  text-align: left;
+  font-size: 60px;
+  font-weight: 300;
+  margin-bottom: 50px;
+  line-height: 1.1;
+}
+
+.content > li .desk table caption span {
+  display: block;
+  font-size: 50px;
+  font-weight: 100;
+}
+
+.content > li .desk table tbody tr {
+  line-height: 1.5;
+}
+
+.content > li .desk table tbody tr th {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.content > li .desk table tbody tr td {
+  font-size: 18px;
+  color: #555555;
+}
+
+.content > li .desk table tbody tr td a {
+  background: url(../img/icon/click-icon.png) no-repeat right center/25px 25px;
+  margin-left: 5px;
+  padding: 0px 18px 4px 4px;
+  border-bottom: 1px dotted #555555;
+  font-weight: 500;
+}
+
+.content > li .desk .sub-title {
+  margin-top: 50px;
+}
+
+.content > li .desk .sub-title li {
+  background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
+  font-size: 23px;
+  padding-left: 35px;
+  color: #333333;
+}
+
+.content > li .desk .sub-title li span {
+  color: red;
+}
+
+.content > li .btn {
+  width: 80%;
+  margin-top: 50px;
+}
+
+.content > li .btn a {
+  display: block;
+  float: right;
+  width: 40%;
+  padding: 3.5%;
+  margin-top: 10px;
+  background: #FCFBFC;
+  font-size: 18px;
+  text-align: center;
+  border: 2px solid #7D7563;
+  border-radius: 8px;
+  -webkit-box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
+          box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.4), 1px 1px 5px rgba(0, 0, 0, 0.4);
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+.content > li .btn a:first-child {
+  float: left;
+}
+
+.content > li .btn a:hover {
+  background: #7D7563;
+  color: #fff;
+  border-color: #FCFBFC;
+}
+
+.content li + li {
+  height: 80%;
+}
+
+.content li + li .btn {
+  position: absolute;
+  left: 50%;
+  bottom: 2%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 30%;
+  overflow: hidden;
+  margin-top: 0px;
+}
+
+.content .explain-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 90%;
+  padding: 5%;
+}
+
+.content .explain-wrap > li {
+  position: relative;
+  width: 30%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.content .explain-wrap > li > img, .content .explain-wrap > li > ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 100%;
+}
+
+.content .explain-wrap .sub-explain ul {
+  padding-left: 5%;
+}
+
+.content .explain-wrap .sub-explain ul li {
+  background: url(../img/icon/importance-icon.svg) no-repeat left center/25px 25px;
+  font-size: 23px;
+  padding-left: 35px;
+  color: #333333;
 }
 
 .pp1 .content-wrap .content li .desk table tbody tr td a {
