--- a/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
+++ b/Jungle-Academy/portfolio5-full_page_design/css/index_p.scss
@@ -2,6 +2,7 @@ section.intro {
   background: #F8F8F8;
 
   > div {
+    // 창이 작아지면 컨텐츠가 넘치는데 확인
     .content-wrap {
       padding: 5%;
       
@@ -90,120 +91,9 @@ section.intro {
     background: #F8F8F8;
 
     .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      position: relative;
+      height: 100%;
       width: 100%;
-      padding: 0% 5%;
-
-      li {
-        position: relative;
-        overflow: hidden;
-
-        img {
-          //img 적용할 때 공간없게 자르기
-          display: block;
-          position: absolute;
-          top: 50%;
-          left: 0%;
-          transform: translateY(-50%);
-          width: 53%;
-        }
-
-        .desk {
-          float: right;
-          width: 45%;
-  
-          table {
-            width: 100%;
-            line-height: 1.3;
-  
-            caption {
-              text-align: left;
-              font-size: 60px;
-              font-weight: 300;
-              margin-bottom: 50px;
-              line-height: 1.1;
-  
-              span {
-                display: block;
-                font-size: 50px;
-                font-weight: 100;
-              }
-            }
-  
-            tbody {
-              tr{
-                line-height: 1.5;
-  
-                th {
-                  font-size: 20px;
-                  font-weight: 500;
-                }
-    
-                td {
-                  font-size: 18px;
-                  color: #555555;
-
-                  a {
-                    background: url(../img/icon/click-icon.png) no-repeat right center / 25px 25px;
-                    margin-left: 5px;
-                    padding: 0px 18px 4px 4px;
-                    border-bottom: 1px dotted #555555;
-                    font-weight: 500;
-                  }
-                }
-              }
-            }
-          }
-
-          .sub-title {
-            margin-top: 50px;
-
-            li{
-              background: url(../img/icon/importance-icon.svg) no-repeat left center / 25px 25px;
-              font-size: 23px;
-              padding-left: 35px;
-              color: #333333;
-
-              span {
-                color: red;
-              }
-            }
-          }
-  
-          .btn {
-            width: 80%;
-            margin-top: 50px;
-  
-            a {
-              display: block;
-              float: left;
-              width: 40%;
-              padding: 3.5%;
-              margin-top: 10px;
-              background: #FCFBFC;
-              font-size: 18px;
-              text-align: center;
-              border: 2px solid #7D7563;
-              border-radius: 8px;
-              box-shadow: 1px 1px 5px rgba(0,0,0,0.4), 1px 1px 5px rgba(0,0,0,0.4);
-              transition: all .4s;
-  
-              &:first-child {
-                margin-right: 3%;
-              }
-  
-              &:hover {
-                background: #7D7563;
-                color: #fff;
-                border-color: #FCFBFC;
-              }
-            }
-          }
-        }
-      }
     }
 
     .control {
@@ -235,6 +125,183 @@ section.intro {
       width: 100%;
       text-align: center;
       font-size: 15px;
+    }
+  }
+}
+
+// 첫번째 li style
+.content {
+
+  > li {
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translateY(-50%);
+    width: 90%;
+    overflow: hidden;
+
+    &:first-child {
+      display: none;
+    }
+    &:nth-child(2) {
+      // display: none;
+    }
+
+    img {
+      //img 적용할 때 공간없게 자르기
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 0%;
+      transform: translateY(-50%);
+      width: 53%;
+    }
+
+    .desk {
+      //absolute로 위치지정하려고 했는데 하면 아무것도 안보임
+      float: right;
+      width: 45%;
+
+      table {
+        width: 100%;
+        line-height: 1.3;
+
+        caption {
+          text-align: left;
+          font-size: 60px;
+          font-weight: 300;
+          margin-bottom: 50px;
+          line-height: 1.1;
+
+          span {
+            display: block;
+            font-size: 50px;
+            font-weight: 100;
+          }
+        }
+
+        tbody {
+          tr{
+            line-height: 1.5;
+
+            th {
+              font-size: 20px;
+              font-weight: 500;
+            }
+
+            td {
+              font-size: 18px;
+              color: #555555;
+
+              a {
+                background: url(../img/icon/click-icon.png) no-repeat right center / 25px 25px;
+                margin-left: 5px;
+                padding: 0px 18px 4px 4px;
+                border-bottom: 1px dotted #555555;
+                font-weight: 500;
+              }
+            }
+          }
+        }
+      }
+
+      .sub-title {
+        margin-top: 50px;
+
+        li{
+          background: url(../img/icon/importance-icon.svg) no-repeat left center / 25px 25px;
+          font-size: 23px;
+          padding-left: 35px;
+          color: #333333;
+
+          span {
+            color: red;
+          }
+        }
+      }
+    }
+
+    .btn {
+      width: 80%;
+      margin-top: 50px;
+
+      a {
+        display: block;
+        float: right;
+        width: 40%;
+        padding: 3.5%;
+        margin-top: 10px;
+        background: #FCFBFC;
+        font-size: 18px;
+        text-align: center;
+        border: 2px solid #7D7563;
+        border-radius: 8px;
+        box-shadow: 1px 1px 5px rgba(0,0,0,0.4), 1px 1px 5px rgba(0,0,0,0.4);
+        transition: all .4s;
+
+        &:first-child {
+          float: left;
+        }
+
+        &:hover {
+          background: #7D7563;
+          color: #fff;
+          border-color: #FCFBFC;
+        }
+      }
+    }
+  }
+}
+
+// 두번째 li style ~
+.content {
+  li+li {
+    height: 80%;
+
+    .btn {
+      //저 오른쪽 공간이 뭔지 모르겠음
+      position: absolute;
+      left: 50%;
+      bottom: 2%;
+      transform: translateX(-50%);
+      width: 30%;
+      overflow: hidden;
+      margin-top: 0px;
+    }
+  }
+
+  .explain-wrap {
+    display: flex;
+    justify-content: space-between;
+    height: 90%;
+    padding: 5%;
+
+    > li {
+      position: relative;
+      width: 30%;
+      height: 100%;
+      overflow: hidden;
+
+      > img, > ul  {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+      }
+    }
+
+    .sub-explain {
+      ul {
+        padding-left: 5%;
+
+        li {
+          background: url(../img/icon/importance-icon.svg) no-repeat left center / 25px 25px;
+          font-size: 23px;
+          padding-left: 35px;
+          color: #333333;
+        }
+      }
     }
   }
 }
